--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   ],
   "require": {
     "php": ">=7.1",
-    "spryker/product-page-search": "dev-spryker_upgrade"
+    "spryker/product-page-search": "^3.0.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "^0.11",
